--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -62,7 +62,7 @@
             &:after {
                 content: '';
                 font-size: 9px;
-                letter-spacing: 2px;
+                letter-spacing: 1px;
                 position: absolute;
                 bottom: 0;
                 display: block;
@@ -123,3 +123,49 @@
     }
 
 }
+@media screen and (max-width: 1200px) {
+    .nav-bar {
+        background: #181818;
+        width: 100%;
+        height: 60px;
+        position: absolute;
+        top: 0;
+        z-index: 3;
+        min-height: 60px;
+
+        .logo {
+            float: left;
+            margin: auto 8px;
+        }
+        ul {
+            text-align: right;
+            top: 20%;
+            right: 2%;
+            width: auto;
+
+            li {
+                a {
+                    padding: 2px 0;
+                }
+            }
+        }
+        nav {
+            display: flex;
+            margin-top: 0;
+            top: 10%;
+            left: 35%;
+            
+            a {
+                width: 51px;
+
+                &:after {
+                    content: '';
+                    display: block;
+                    text-align: center;
+                }
+            }
+        }
+
+        
+    }
+  }
