--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 $primary-color: #ff1100;
 
 @import 'animate.css';
+@import '~loaders.css/src/animations/ball-pulse-sync.scss';
 
 @font-face {
   font-family: 'Helvetica Neue';
@@ -20,4 +21,18 @@ $primary-color: #ff1100;
 input,
 textarea {
   font-family: 'Helvetica Neue';
+}
+
+.loader-active {
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  width: 60px;
+  height: 50px;
+  animation: fadeOut 1s 1s;
+  animation-fill-mode: forwards;
 }
