--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -18,6 +18,7 @@
             animation: fadeInUp 2s 2s;
             animation-fill-mode: forwards;
             clear: both;
+            border-radius: 3px;
         }
 
         li.half {
@@ -42,6 +43,7 @@
         color: #fff;
         padding: 0 20px;
         box-sizing: border-box;
+        font-family: 'Helvetica';
     }
 
     textarea {
@@ -54,6 +56,9 @@
         padding: 20px;
         min-height: 150px;
         box-sizing: border-box;
+        font-family: 'Helvetica';
+        resize: none;
+        border-radius: 3px;
     }
 
     .flat-button {
@@ -66,5 +71,80 @@
         border: 1px solid #ff1100;
         float: right;
         border-radius: 4px;
+        font-family: 'Helvetica';
+
+        &:hover {
+            color: #000;
+            background-color: #ff1100;
+            cursor: pointer;
+        }
     }
 }
+
+.info-map {
+    position: absolute;
+    background-color: #000;
+    top: 50px;
+    right: 30%;
+    z-index: 999999;
+    width: 267px;
+    padding: 20px;
+    color: #fff;
+    font-family: 'Helvetica';
+    font-size: 17px;
+    font-weight: 300;
+    opacity: 0;
+    animation: fadeIn 1s 1.5s;
+    animation-fill-mode: forwards;
+
+    span {
+        font-size: 16px;
+        display: block;
+        padding-top: 20px;
+        color: #ff1100;
+    }
+}
+
+
+.map-wrap {
+    background: rgba(139, 0, 0, 0.1);
+    float: right;
+    margin-right: 20px;
+    width: 50%;
+    height: 100%;
+    border: 0 0;
+}
+
+.leaflet-container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    opacity: 0;
+    animation: backInRight 1s 1.2s;
+    animation-fill-mode: forwards;
+    border-radius: 5px;
+    border: 0 0;
+}
+
+
+@media screen and (max-width: 1200px) {
+    .map-wrap {
+      float: none;
+      margin: 0;
+      width: 100%;
+      height: 400px;
+      bottom: 0;
+      z-index: -1;
+      margin-top: 350px;
+      position: relative;
+    }
+    
+    .info-map {
+      display: block;
+      position: relative;
+      bottom: 0;
+      top: 0;
+      left: 0;
+      animation: none;
+    }
+  }
